--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "jest": "^27.5.1",
     "webpack": "^5.72.0",
     "webpack-cli": "^4.9.2",
-    "webpack-dev-server": "^3.11.3"
+    "webpack-dev-server": "^3.11.3",
+    "whatwg-fetch": "^3.6.2"
   },
   "dependencies": {
     "node-fetch": "^2.6.7",
